Fix for null value async bug

--- a/scriptlang.benchmarking/BenchmarkDotNet.Artifacts/results/MyBenchmarks.Benchmarks-report.html
+++ b/scriptlang.benchmarking/BenchmarkDotNet.Artifacts/results/MyBenchmarks.Benchmarks-report.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 <meta charset='utf-8' />
-<title>MyBenchmarks.Md5VsSha256-20190601-074043</title>
+<title>MyBenchmarks.Benchmarks-20190601-080145</title>
 
 <style type="text/css">
 	table { border-collapse: collapse; display: block; width: 100%; overflow: auto; }
@@ -23,9 +23,11 @@ Intel Core i7-4770HQ CPU 2.20GHz (Haswell), 1 CPU, 8 logical and 4 physical core
 </code></pre>
 
 <table>
-<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th><th>Rank</th>
+<thead><tr><th>Method</th><th>Mean</th><th>Error</th><th>StdDev</th>
 </tr>
-</thead><tbody><tr><td>IfStatement</td><td>168.6 ns</td><td>3.687 ns</td><td>4.663 ns</td><td>1</td>
+</thead><tbody><tr><td>IfStatement</td><td>162.41 ns</td><td>3.2742 ns</td><td>6.1498 ns</td>
+</tr><tr><td>Constant</td><td>75.30 ns</td><td>0.8511 ns</td><td>0.7545 ns</td>
+</tr><tr><td>Lists</td><td>878.50 ns</td><td>12.6284 ns</td><td>11.1947 ns</td>
 </tr></tbody></table>
 </body>
 </html>
